BUG#39447: Error with NOT NULL condition and LIMIT 1 - in test_if_skip_sort_order(): if we first decided to use one index and use index   condition pushdown but then re-considered and picked another index, undo the index   condition pushdown properly. Original revid:sergefp@mysql.com-20081229034230-tdlibl8bgepjx7o8